# hermes-video-rs

./: Cargo.toml  LICENSE  PHASE-6-3-PLAN.md  README.md  REFACTOR-PLAN.md
.github/workflows/: security.yml
docs/: PLAN-OPTIMIZATION.md  crate-docs-core.md  ffmpeg-patterns.md  language-and-setup.md
skill/watch/: SKILL.md
skill/watch2/: SKILL.md
skill/watch2/references/: manual-fallback-pipeline.md
src/: cache.rs  cli.rs  config.rs  corrections.rs  dedup.rs  download.rs  error.rs  frames.rs  fusion.rs  lib.rs  llm.rs  main.rs  moment_frames.rs  moments.rs  output.rs  pipeline.rs  scene.rs  scene_detect.rs  setup.rs  stats.rs  synthesis.rs  timestamp.rs  transcript.rs  vision.rs  vision_batch.rs  whisper.rs
src/frames/: gap_fill.rs  keyframe.rs  metadata.rs  mod.rs  scene.rs  timestamp.rs  two_pass.rs  uniform.rs
tests/: test_cli.rs  test_config.rs  test_download.rs  test_frames.rs  test_output.rs  test_setup.rs  test_timestamp.rs  test_transcript.rs
